--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "terser": "^5.44.1",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "ws": "^8.18.3"
   }
 }
